--- a/templates/index.html
+++ b/templates/index.html
@@ -294,20 +294,22 @@
                     period_time_remaining.innerText = compiled_time_diff;
                     date.innerText = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"][d.getDay()];
                     time.innerText = hours + ":" + minutes;
-					
-			var minutes_left = Number(time_difference[1]);
-			if (minutes_left == 15 && !fifteen_minute_notification) {
-				show_notification(period_data_name, "Fifteen minutes");
-				fifteen_minute_notification = true;
-			} else if (minutes_left == 10 && !ten_minute_notification) {
-				show_notification(period_data_name, "Ten minutes");
-				ten_minute_notification = true;
-			} else if (minutes_left == 5 && !five_minute_notification) {
-				show_notification(period_data_name, "Five minutes");
-				five_minute_notification = true;
-			} else if (minutes_left == 1 && !one_minute_notification) {
-				show_notification(period_data_name, "One minute");
-				one_minute_notification = true;
+			
+			if (Number(time_difference[0]) == 0) {
+				var minutes_left = Number(time_difference[1]);
+				if (minutes_left == 15 && !fifteen_minute_notification) {
+					show_notification(period_data_name, "Fifteen minutes");
+					fifteen_minute_notification = true;
+				} else if (minutes_left == 10 && !ten_minute_notification) {
+					show_notification(period_data_name, "Ten minutes");
+					ten_minute_notification = true;
+				} else if (minutes_left == 5 && !five_minute_notification) {
+					show_notification(period_data_name, "Five minutes");
+					five_minute_notification = true;
+				} else if (minutes_left == 1 && !one_minute_notification) {
+					show_notification(period_data_name, "One minute");
+					one_minute_notification = true;
+				}
 			}
                 }
 		function show_notification(period_name="Unknown Period", time_remaining="XX minutes") {
