Improve Lighthouse performance score
[skip travis]
Previously 96

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,9 +19,7 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon-180x180.png" />
 
 		<link rel="stylesheet" href="/static/css/center.css">
-		<link rel="stylesheet" href="/static/css/schedule-colors.css">
-		<link rel="stylesheet" href="https://w3schools.com/w3css/4/w3.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap">
+		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 		<style>
 			body, h3, h4, h5, select, option, header, main, div, span {
@@ -84,6 +82,9 @@
 		</style>
 	</head>
 	<body>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap">
+		<link rel="stylesheet" href="/static/css/schedule-colors.css">
+		
 		<header class="w3-container ut-pc-darkblue">
 			<h3>
 				Schedules
