Switch to external CSS file
[skip travis]

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,71 +20,8 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon-180x180.png" />
 
 		<link rel="stylesheet" href="/static/css/center.css">
+		<link rel="stylesheet" href="/static/css/main.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-		<style>
-			body, h3, h4, h5, select, option, header, main, div, span {
-				font-family: 'Source Sans Pro', sans-serif;
-			}
-
-			body, select#schedule_name {
-				background-color: #736F72;
-				color: #ffffff;
-			}
-
-			.ut-pc-darkblue {
-				background-color: #13323C;
-				color: #FFFFFF;
-			}
-
-			label, span#link-changelog--text {
-				font-size: 0px;
-			}
-			
-			select#schedule_name {
-				padding: 6px;
-			}
-
-			main#period_info {
-				padding: 12px;
-				text-align: center;
-				background-color: #BCD4DE;
-				color: #000000;
-			}
-			
-			select#schedule_selection {
-				width: 25%;
-				display: inline;
-			}
-
-			.w3-card-4 {
-				width: 75%;
-			}
-
-			@media screen and (max-width: 600px) {
-				header#schedule_info {
-					padding: 12px 16px;
-					text-align: center;
-				}
-
-				h4.w3-row {
-					text-align: center;
-				}
-				h4.w3-row div.w3-half {
-					display: block;
-				}
-
-			}
-
-			@media screen and (min-width: 601px) {
-				header#schedule_info {
-					padding: 6px 16px;
-				}
-				header#schedule_info div.ut-pc-right {
-					float: right!important;
-				}
-			}
-		</style>
 	</head>
 	<body>		
 		<header class="w3-container ut-pc-darkblue">
