--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -17,49 +17,10 @@
 		<link rel="apple-touch-icon" sizes="144x144" href="/static/img/apple-touch-icon-144x144.png" />
 		<link rel="apple-touch-icon" sizes="152x152" href="/static/img/apple-touch-icon-152x152.png" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon-180x180.png" />
-
+		
+		<link rel="stylesheet" href="/static/css/all.css">
 		<link rel="stylesheet" href="/static/css/center.css">
-		<link rel="stylesheet" href="https://w3schools.com/w3css/4/w3.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap">
-
-		<style>
-			body, h3, h4, h5, select, option, header, main, div, span {
-				font-family: 'Source Sans Pro', sans-serif;
-			}
-
-            code {
-                background-color: rgba(236, 236, 236, 0.3);
-                color: #ff0000;
-                padding: 1px 8px;
-            }
-
-			body, select {
-				background-color: #736F72;
-				color: #ffffff;
-			}
-
-			.ut-pc-darkblue {
-				background-color: #13323C;
-				color: #FFFFFF;
-			}
-
-            select#version_changelog {
-				padding: 6px;
-			}
-
-			main#changelog {
-				padding: 12px;
-				background-color: #BCD4DE;
-				color: #000000;
-                
-                height: 30vh;
-                overflow-y: scroll;
-			}
-
-			.w3-card-4 {
-				width: 75%;
-			}
-		</style>
+		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	</head>
 	<body>
 		<header class="w3-container ut-pc-darkblue">
@@ -126,5 +87,8 @@
                 }
             }
         </script>
+		
+		<link rel="stylesheet" href="/static/css/changelog.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap">
 	</body>
 </html>
