External CSS, all.css, re-organization

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
 		<link rel="apple-touch-icon" sizes="152x152" href="/static/img/apple-touch-icon-152x152.png" />
 		<link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon-180x180.png" />
 
+		<link rel="stylesheet" href="/static/css/all.css">
 		<link rel="stylesheet" href="/static/css/center.css">
-		<link rel="stylesheet" href="/static/css/main.css">
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	</head>
 	<body>		
@@ -275,7 +275,8 @@
             </script>
 		{% endif %}
 		
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap">
+		<link rel="stylesheet" href="/static/css/main.css">
 		<link rel="stylesheet" href="/static/css/schedule-colors.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap">
 	</body>
 </html>
