Add label to select#version_changelog

--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -31,6 +31,7 @@
 						<svg style="width:30px;height:30px" viewBox="0 0 24 24">
 						    <path fill="#ffffff" d="M12 5.69L17 10.19V18H15V12H9V18H7V10.19L12 5.69M12 3L2 12H5V20H11V14H13V20H19V12H22L12 3Z" />
 						</svg>
+						<span id="link-home--text">Go to the homepage</span>
 					</a>
 				</div>
 			</h3>
@@ -45,6 +46,7 @@
 							<option value="{{ version }}">{{ version }}</option>
 						{% endfor %}
 					</select>
+					<label for="version_changelog">All versions</label>
 				</main>
                 
                 <main id="changelog">
