--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -5,6 +5,7 @@
 
 		<meta charset="utf-8">
 		<meta name="theme-color" content="#13323C">
+		<meta name="description" content="The app for all schedules">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
 		<link rel="shortcut icon" type="image/x-icon" href="/static/img/favicon.ico" />
