--- a/static/css/all.css
+++ b/static/css/all.css
@@ -1,5 +1,5 @@
 /* CSS used in all templates */
-body, h3, h4, h5, select, option, header, main, div, span {
+* {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
