--- a/static/css/changelog.css
+++ b/static/css/changelog.css
@@ -11,6 +11,6 @@ main#changelog {
 }
 code {
   background-color: rgba(181, 181, 181, 0.6);
-  color: #6f685b;
+  color: #ffffff;
   padding: 1px 8px;
 }
