--- a/templates/index.html
+++ b/templates/index.html
@@ -238,7 +238,7 @@
 		    }
                     period_time_remaining.innerText = compiled_time_diff;
                     date.innerText = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"][d.getDay()];
-                    time.innerText = hours + ":" + minutes + ":" seconds;
+                    time.innerText = hours + ":" + minutes + ":" + seconds;
 			
 			if (window_focused != true) {
 				if (Number(time_difference[0]) == 0) {
