--- a/templates/index.html
+++ b/templates/index.html
@@ -140,47 +140,36 @@
                     }
                 }
 		function generate_four_digit_time(join_character="") {
-			return [zero_time(current_time_split.split("-")[0]), zero_time(current_time_split.split("-")[1])].join(join_character);
+			return [zero_time(current_time_split.split("-")[0]), zero_time(current_time_split.split("-")[1]), zero_time(current_time_split.split("-")[2])].join(join_character);
 		}
                 function calculate_time(st_time, ed_time) {
                     var start_time = st_time.toString(),
                         end_time = ed_time.toString();
 
-                    if (start_time.indexOf("-") != -1) {
-                        var _st = start_time.split("-"),
-                            st_hr = Number(_st[0]),
-                            st_min = Number(_st[1]);
-                    } else if (start_time.indexOf(":") != -1) {
-                        var _st = start_time.split(":"),
-                            st_hr = Number(_st[0]),
-                            st_min = Number(_st[1]);
-                    } else {
-                        var st_hr = Number(start_time.substring(0, 2)),
-                            st_min = Number(start_time.substring(2, start_time.length));
-                    }
+                    var _st = start_time.split("-"),
+		    	st_hr = Number(_st[0]),
+		    	st_min = Number(_st[1]),
+			st_sec = Number(_st[2]);
 
-                    if (end_time.indexOf("-") != -1) {
-                        var _ed = end_time.split("-"),
-                            ed_hr = Number(_ed[0]),
-                            ed_min = Number(_ed[1]);
-                    } else if (end_time.indexOf(":") != -1) {
-                        var _ed = end_time.split(":"),
-                            ed_hr = Number(_ed[0]),
-                            ed_min = Number(_ed[1]);
-                    } else {
-                        var ed_hr = Number(end_time.substring(0, 2)),
-                            ed_min = Number(end_time.substring(2, end_time.length));
-                    }
+		    var _ed = end_time.split("-"),
+		    	ed_hr = Number(_ed[0]),
+		    	ed_min = Number(_ed[1]),
+			ed_sec = Number(_ed[2]);
 
                     var hour_difference = ed_hr - st_hr,
-                        minute_difference = ed_min - st_min;
+                        minute_difference = ed_min - st_min,
+			second_difference = ed_sec - st_sec;
 
                     if (minute_difference < 0) {
                         hour_difference -= 1
                         minute_difference += 60
                     }
+		    if (second_difference < 0) {
+			minute_difference -= 1
+			second_difference += 60
+		    }
 
-                    return [hour_difference, minute_difference]
+                    return [hour_difference, minute_difference, second_difference]
                 }
 
                 function update_period() {
@@ -206,10 +195,10 @@
                         var scheduled_end;
                         if (period_data[1].toString().length == 3) {
                             var str_pd_1 = period_data[1].toString();
-                            scheduled_end = str_pd_1.substring(0, 1) + "-" + str_pd_1.substring(1, str_pd_1.length);
+                            scheduled_end = str_pd_1.substring(0, 1) + "-" + str_pd_1.substring(1, str_pd_1.length) + "-00";
                         } else {
                             var str_pd_1 = period_data[1].toString();
-                            scheduled_end = str_pd_1.substring(0, 2) + "-" + str_pd_1.substring(2, str_pd_1.length);
+                            scheduled_end = str_pd_1.substring(0, 2) + "-" + str_pd_1.substring(2, str_pd_1.length) + "-00";
                         }
                         
 			var time_difference = calculate_time(generate_four_digit_time(join_character="-"), scheduled_end),
