--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 		
 		<link rel="shortcut icon" type="image/x-icon" href="/static/img/favicon.ico" />
 		<link rel="apple-touch-icon" href="/static/img/apple-touch-icon.png" />
-		<link rel="apple-touch-icon" sizes="57x57" href="/static/img/apple-touch-icon-57x57.png" />
+		<link rel="apple-touch-icon" sizes="57x57" href="/static/img/apple-touch-icon>-57x57.png" />
 		<link rel="apple-touch-icon" sizes="72x72" href="/static/img/apple-touch-icon-72x72.png" />
 		<link rel="apple-touch-icon" sizes="76x76" href="/static/img/apple-touch-icon-76x76.png" />
 		<link rel="apple-touch-icon" sizes="114x114" href="/static/img/apple-touch-icon-114x114.png" />
@@ -120,7 +120,7 @@
 			    var period_start = [period[0].split("-")[0], period[0].split("-")[1]].join(""),
 				period_end = [period[1].split("-")[0], period[1].split("-")[1]].join("");
 				
-                            if (period_start >= current_time_fd && current_time_fd >= period_end) {
+                            if (period_start <= current_time_fd && current_time_fd <= period_end) {
                                 return [_period, period]
                             }
                         }
