Prevent seconds from being shown before 59minutes

--- a/templates/index.html
+++ b/templates/index.html
@@ -213,7 +213,7 @@
 				    compiled_time_diff = time_difference[1] + "m" + time_difference[2] + "s";
 			    }
                         } else {
-                            compiled_time_diff = time_difference[0] + "h" + time_difference[1] + "m" + time_difference[2] + "s";                            
+                            compiled_time_diff = time_difference[0] + "h" + time_difference[1] + "m";                            
                         }
                     } else {
                         var time_difference = "NT",
