Add Google Analytics tracking
[skip travis]

--- a/templates/index.html
+++ b/templates/index.html
@@ -284,5 +284,14 @@
 		
 		<link rel="stylesheet" href="/static/css/main.css">
 		<link rel="stylesheet" href="/static/css/schedule-colors.css">
+		
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-CZTHXW8HDT"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-CZTHXW8HDT');
+		</script>
 	</body>
 </html>
