--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -92,5 +92,14 @@
         </script>
 		
 		<link rel="stylesheet" href="/static/css/changelog.css">
+		
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-CZTHXW8HDT"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-CZTHXW8HDT');
+		</script>
 	</body>
 </html>
