--- a/templates/index.html
+++ b/templates/index.html
@@ -210,7 +210,11 @@
 			    if (time_difference[1] == 0) {
 				    compiled_time_diff = time_difference[2] + "s";
 			    } else {
-				    compiled_time_diff = time_difference[1] + "m" + time_difference[2] + "s";
+				    if (time_difference[1] > 2) {
+					    compiled_time_diff = time_difference[1] + "m";
+				    } else {
+					    compiled_time_diff = time_difference[1] + "m" + time_difference[2] + "s";
+				    }
 			    }
                         } else {
                             compiled_time_diff = time_difference[0] + "h" + time_difference[1] + "m";                            
