--- a/templates/index.html
+++ b/templates/index.html
@@ -211,13 +211,13 @@
 				    compiled_time_diff = time_difference[2] + "s";
 			    } else {
 				    if (time_difference[1] > 2) {
-					    compiled_time_diff = time_difference[1] + "m";
+					    compiled_time_diff = time_difference[1]+1 + "m";
 				    } else {
 					    compiled_time_diff = time_difference[1] + "m" + time_difference[2] + "s";
 				    }
 			    }
                         } else {
-                            compiled_time_diff = time_difference[0] + "h" + time_difference[1] + "m";                            
+                            compiled_time_diff = time_difference[0] + "h" + time_difference[1]+1 + "m";                            
                         }
                     } else {
                         var time_difference = "NT",
