Add one minute to notifications "minutes_left"

--- a/templates/index.html
+++ b/templates/index.html
@@ -249,7 +249,7 @@
 			
 			if (window_focused != true) {
 				if (Number(time_difference[0]) == 0 && Number(time_difference[2]) == 0) {
-					var minutes_left = Number(time_difference[1]);
+					var minutes_left = Number(time_difference[1]) + 1;
 					if (minutes_left == 15 && !fifteen_minute_notification) {
 						show_notification(period_data_name, "Fifteen minutes");
 						fifteen_minute_notification = true;
