--- a/templates/index.html
+++ b/templates/index.html
@@ -91,11 +91,13 @@
 		    
 		var period_name_old = "",
 		    period_different = false,
-		    window_focused = true,
-	            fifteen_minute_notification = false,
+		    window_focused = true;
+		    
+	        var fifteen_minute_notification = false,
 		    ten_minute_notification = false,
 		    five_minute_notification = false,
-		    one_minute_notification = false;
+		    one_minute_notification = false,
+		    thirty_second_notification = false;
 
                 const schedule_id = "{{ schedule_id }}",
 		      schedule_name = "{{ schedule_name }}";
@@ -237,10 +239,12 @@
                     period_name.innerText = period_data_name;
 		    if (period_different == true) {
 			    period_different = false;
+			    
 		    	    fifteen_minute_notification = false;
 			    ten_minute_notification = false;
 			    five_minute_notification = false;
 			    one_minute_notification = false;
+			    thirty_second_notification = false;
 		    }
                     period_time_remaining.innerText = compiled_time_diff;
                     date.innerText = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"][d.getDay()];
@@ -248,25 +252,31 @@
 			
 			if (window_focused != true) {
 				if (Number(time_difference[0]) == 0 && Number(time_difference[2]) == 0) {
-					var minutes_left = Number(time_difference[1]) + 1;
+					var minutes_left = Number(time_difference[1]) + 1,
+					    seconds_left = Number(time_difference[2]);
+					
 					if (minutes_left == 15 && !fifteen_minute_notification) {
-						show_notification(period_data_name, "Fifteen minutes");
+						show_notification(schedule_name, period_data_name, "Fifteen minutes");
 						fifteen_minute_notification = true;
 					} else if (minutes_left == 10 && !ten_minute_notification) {
-						show_notification(period_data_name, "Ten minutes");
+						show_notification(schedule_name, period_data_name, "Ten minutes");
 						ten_minute_notification = true;
 					} else if (minutes_left == 5 && !five_minute_notification) {
-						show_notification(period_data_name, "Five minutes");
+						show_notification(schedule_name, period_data_name, "Five minutes");
 						five_minute_notification = true;
 					} else if (minutes_left == 1 && !one_minute_notification) {
-						show_notification(period_data_name, "One minute");
+						show_notification(schedule_name, period_data_name, "One minute");
 						one_minute_notification = true;
+					} else if (minutes_left == 0 && seconds_left == 30 && !thirty_second_notification) {
+						show_notification(schedule_name, period_data_name, "Thirty seconds");
+						thirty_second_notification = true;
 					}
 				}
 			}
 		}
-		function show_notification(period_name="Unknown Period", time_remaining="XX minutes") {
-			var title_text = schedule_name + " - " + period_name,
+			 
+		function show_notification(name="Schedules", period_name="Unknown Period", time_remaining="XX minutes") {
+			var title_text = name + " - " + period_name,
 			    body_text = time_remaining + " left";
 			
 			if (!("Notification" in window)) {
