Replace W3Schools w3.css with static/css

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,6 @@
 
 		<link rel="stylesheet" href="/static/css/all.css">
 		<link rel="stylesheet" href="/static/css/center.css">
-		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	</head>
 	<body>		
 		<header class="w3-container ut-pc-darkblue">
@@ -298,6 +297,7 @@
             </script>
 		{% endif %}
 		
+		<link rel="stylesheet" href="/static/css/w3.css">
 		<link rel="stylesheet" href="/static/css/main.css">
 		<link rel="stylesheet" href="/static/css/schedule-colors.css">
 	</body>
