Replace W3Schools w3.css with static/css

--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -21,7 +21,6 @@
 		
 		<link rel="stylesheet" href="/static/css/all.css">
 		<link rel="stylesheet" href="/static/css/center.css">
-		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	</head>
 	<body>
 		<header class="w3-container ut-pc-darkblue">
@@ -91,6 +90,7 @@
             }
         </script>
 		
+		<link rel="stylesheet" href="/static/css/w3.css">
 		<link rel="stylesheet" href="/static/css/changelog.css">
 	</body>
 </html>
