--- a/templates/index.html
+++ b/templates/index.html
@@ -251,7 +251,7 @@
 			
 			if (window_focused != true) {
 				if (Number(time_difference[0]) == 0 && Number(time_difference[2]) == 0) {
-					var minutes_left = Number(time_difference[1]) + 1,
+					var minutes_left = Number(time_difference[1]),
 					    seconds_left = Number(time_difference[2]);
 					
 					if (minutes_left == 15 && !fifteen_minute_notification) {
