--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,8 @@
 		    period_different = false,
 		    window_focused = true;
 		    
-	        var fifteen_minute_notification = false,
+	        var thirty_minute_notification = false,
+		    fifteen_minute_notification = false,
 		    ten_minute_notification = false,
 		    five_minute_notification = false,
 		    one_minute_notification = false,
@@ -239,7 +240,8 @@
 		    if (period_different == true) {
 			    period_different = false;
 			    
-		    	    fifteen_minute_notification = false;
+		    	    thirty_minute_notification = false;
+			    fifteen_minute_notification = false;
 			    ten_minute_notification = false;
 			    five_minute_notification = false;
 			    one_minute_notification = false;
@@ -251,10 +253,12 @@
 			
 			if (window_focused != true) {
 				if (Number(time_difference[0]) == 0 && Number(time_difference[2]) == 0) {
-					var minutes_left = Number(time_difference[1]),
-					    seconds_left = Number(time_difference[2]);
+					var minutes_left = Number(time_difference[1]) + 1;
 					
-					if (minutes_left == 15 && !fifteen_minute_notification) {
+					if (minutes_left == 30 && !thirty_minute_notification) {
+						show_notification(schedule_name, period_data_name, "Thirty minutes");
+						thirty_minute_notification = true;
+					} else if (minutes_left == 15 && !fifteen_minute_notification) {
 						show_notification(schedule_name, period_data_name, "Fifteen minutes");
 						fifteen_minute_notification = true;
 					} else if (minutes_left == 10 && !ten_minute_notification) {
@@ -266,7 +270,7 @@
 					} else if (minutes_left == 1 && !one_minute_notification) {
 						show_notification(schedule_name, period_data_name, "One minute");
 						one_minute_notification = true;
-					} else if (Number(time_difference[1]) == 0 && seconds_left == 30 && !thirty_second_notification) {
+					} else if (Number(time_difference[1]) == 0 && Number(time_difference[2]) == 30 && !thirty_second_notification) {
 						show_notification(schedule_name, period_data_name, "Thirty seconds");
 						thirty_second_notification = true;
 					}
