--- a/templates/index.html
+++ b/templates/index.html
@@ -243,7 +243,7 @@
 			
 			if (Number(time_difference[0]) == 0) {
 				if (Number(time_difference[2]) == 0) {
-					var minutes_left = Number(time_difference[1]) + 1;
+					var minutes_left = Number(time_difference[1]);
 
 					if (minutes_left == 30 && !thirty_minute_notification) {
 						show_notification(schedule_name, period_data_name, "Thirty minutes");
