--- a/static/css/all.css
+++ b/static/css/all.css
@@ -6,7 +6,7 @@ body, h3, h4, h5, select, option, header, main, div, span {
 }
 
 body, select#schedule_name, select#version_changelog {
-  background-color: #736F72;
+  background-color: #121212;
   color: #ffffff;
 }
 
