--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,8 +5,8 @@ select#schedule_name {
 main#period_info {
   padding: 12px;
   text-align: center;
-  background-color: #BCD4DE;
-  color: #000000;
+  background-color: #736F72;
+  color: #ffffff;
 }
 
 select#schedule_selection {
