--- a/static/css/all.css
+++ b/static/css/all.css
@@ -5,8 +5,12 @@ body, h3, h4, h5, select, option, header, main, div, span {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
-body, select#schedule_name, select#version_changelog {
+body {
   background-color: #121212;
+  color: #ffffff;
+}
+select#schedule_name, select#version_changelog {
+  background-color: #262626;
   color: #ffffff;
 }
 
