Update background-color attribute

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,7 +5,7 @@ select#schedule_name {
 main#period_info {
   padding: 12px;
   text-align: center;
-  background-color: #736F72;
+  background-color: #404040;
   color: #ffffff;
 }
 
