--- a/static/css/all.css
+++ b/static/css/all.css
@@ -5,12 +5,8 @@ body, h3, h4, h5, select, option, header, main, div, span {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
-body {
-  background-color: #121212;
-  color: #ffffff;
-}
-div#selection, select#schedule_name, select#version_changelog {
-  background-color: #404040;
+body, select#schedule_name, select#version_changelog {
+  background-color: #736F72;
   color: #ffffff;
 }
 
