--- a/templates/schedule_404.html
+++ b/templates/schedule_404.html
@@ -26,43 +26,25 @@
 		<header class="w3-container ut-pc-darkblue">
 			<h3>
 				Schedules
-				<div class="w3-right">
-					<a href="/">
-						<svg style="width:30px;height:30px" viewBox="0 0 24 24">
-						    <path fill="#ffffff" d="M12 5.69L17 10.19V18H15V12H9V18H7V10.19L12 5.69M12 3L2 12H5V20H11V14H13V20H19V12H22L12 3Z" />
-						</svg>
-						<span id="link-home--text">Go to the homepage</span>
-					</a>
-				</div>
 			</h3>
 		</header>
 
 		<main id="404_container" class="ut-pt-center">
-        <header id="404_header" class="w3-container w3-blue">
-        </header>
-        <main id="404_message">
-
-              </main>
+			<header id="404_header" class="w3-container w3-red">
+				404: Unable to find schedule
+			</header>
+			<main id="404_message">
+				The schedule you were looking for cannot be found. You will be redirected to the main page in 5 seconds.
+			</main>
 		</main>
 
         <script>
-            function show_changelog(version_number) {
-                var changelog_versions = document.getElementsByClassName("changelog-version");
-                if (version_number == "all") {
-                    for (var i = 0; i < changelog_versions.length; i++) {
-                        changelog_versions[i].style.display = "block";
-                    }
-                } else {
-                    for (var i = 0; i < changelog_versions.length; i++) {
-                        changelog_versions[i].style.display = "none";
-                    }
-                    
-                    document.getElementById("changelog-" + version_number).style.display = "block";
-                }
-            }
+		window.setTimeout(function(){
+			window.location.href = "https://" + window.location.host + "/";
+		}, 5000);
         </script>
 		
 		<link rel="stylesheet" href="/static/css/w3.css">
-		<link rel="stylesheet" href="/static/css/changelog.css">
+		<link rel="stylesheet" href="/static/css/404.css">
 	</body>
 </html>
