--- a/templates/schedule_404.html
+++ b/templates/schedule_404.html
@@ -29,7 +29,7 @@
 			</h3>
 		</header>
 
-		<main id="404_container" class="ut-pt-center">
+		<main id="404_container" class="w3-card-4 ut-pt-center">
 			<header id="404_header" class="w3-container w3-red">
 				404: Unable to find schedule
 			</header>
