--- a/templates/schedule_404.html
+++ b/templates/schedule_404.html
@@ -32,7 +32,7 @@
 		<main id="404_container" class="ut-pt-center">
 			<main id="404_card" class="w3-card-4">
 				<header id="404_header" class="w3-container w3-red">
-					404: Unable to find schedule
+					<h3>404: Unable to find schedule</h3>
 				</header>
 				<main id="404_message">
 					The schedule you were looking for cannot be found. You will be redirected to the main page in 5 seconds.
