Update 404 page (part of issue #39)

--- a/templates/schedule_404.html
+++ b/templates/schedule_404.html
@@ -34,7 +34,7 @@
 				<header id="404_header" class="w3-container w3-red">
 					<h3>404: Unable to find schedule</h3>
 				</header>
-				<main id="404_message">
+				<main id="404_message" class="w3-container">
 					The schedule you were looking for cannot be found. You will be redirected to the main page in 5 seconds.
 				</main>
 			</main>
