--- a/templates/404.html
+++ b/templates/404.html
@@ -32,10 +32,10 @@
 		<main id="404_container" class="ut-pt-center">
 			<main id="404_card" class="w3-card-4">
 				<header id="404_header" class="w3-container w3-red">
-					<h3>404: Unable to find schedule</h3>
+					<h3>404: Unable to find the page you were looking for</h3>
 				</header>
 				<main id="404_message" style="padding:12px;">
-					The schedule you were looking for cannot be found. You will be redirected to the main page in 5 seconds.
+					The page you were looking for cannot be found. You will be redirected to the <a href="/">main page</a> in 5 seconds.
 				</main>
 			</main>
 		</main>
