--- a/templates/roadmap.html
+++ b/templates/roadmap.html
@@ -1,1 +1,60 @@
+<!DOCTYPE HTML>
+<html lang="en">
+	<head>
+		<title>Schedules - Roadmap</title>
 
+		<meta charset="utf-8">
+		<meta name="theme-color" content="#13323C">
+		<meta name="description" content="The app for all schedules">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
+		<link rel="shortcut icon" type="image/x-icon" href="/static/img/favicon.ico" />
+		<link rel="apple-touch-icon" href="/static/img/apple-touch-icon.png" />
+		<link rel="apple-touch-icon" sizes="57x57" href="/static/img/apple-touch-icon-57x57.png" />
+		<link rel="apple-touch-icon" sizes="72x72" href="/static/img/apple-touch-icon-72x72.png" />
+		<link rel="apple-touch-icon" sizes="76x76" href="/static/img/apple-touch-icon-76x76.png" />
+		<link rel="apple-touch-icon" sizes="114x114" href="/static/img/apple-touch-icon-114x114.png" />
+		<link rel="apple-touch-icon" sizes="120x120" href="/static/img/apple-touch-icon-120x120.png" />
+		<link rel="apple-touch-icon" sizes="144x144" href="/static/img/apple-touch-icon-144x144.png" />
+		<link rel="apple-touch-icon" sizes="152x152" href="/static/img/apple-touch-icon-152x152.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon-180x180.png" />
+		
+		<link rel="stylesheet" href="/static/css/all.css">
+		<link rel="stylesheet" href="/static/css/center.css">
+	</head>
+	<body>
+		<header class="w3-container ut-pc-darkblue">
+			<h3>
+				Schedules
+			</h3>
+		</header>
+
+		<main id="roadmap_container" class="ut-pt-center">
+			<main id="roadmap_card" class="w3-card-4">
+				<header id="roadmap_header" class="w3-container">
+            <h3>Roadmap</h3>
+				</header>
+				<main id="roadmap_message" style="padding:12px;">
+				    <ul>
+                <li>
+                    January 2020
+                    <ul>
+                        <li>Release Version 3</li>
+                        <li>Begin working on the iOS client</li>
+                    </ul>
+                </li>
+                <li>
+                    February 2020
+                    <ul>
+                        <li>Begin working on the Android client</li>
+                    </ul>
+                </li>
+            </ul>
+				</main>
+			</main>
+		</main>
+		
+		<link rel="stylesheet" href="/static/css/w3.css">
+		<link rel="stylesheet" href="/static/css/roadmap.css">
+	</body>
+</html>
