Add the DLS color
Color is picked from the header on the AUHSD website

--- a/static/css/schedule-colors.css
+++ b/static/css/schedule-colors.css
@@ -6,7 +6,7 @@
   background-color: #a80000;
   color: #ffffff;
 }
-.color--un-average-workday {
-  background-color: #188f24;
+.color--ca-auhsd-dls {
+  background-color: #343254;
   color: #ffffff;
 }
